Update search form placeholder and adjust display credits background for consistency

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
           <i>1000 Cr</i>
         </div>
       </nav>
-      <div class="container-fluid">
+      <div class="container-fluid w-50">
         <form class="d-flex" role="search">
           <div class="input-group mb-3">
             <input
@@ -71,7 +71,7 @@
             <input
               class="form-control me-2"
               type="search"
-              placeholder="Filter tags(comma separated)"
+              placeholder="Filter By Tags(comma separated)"
               aria-label="Filter"
             />
           </div>
