Fix display credits positioning in header for better alignment

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
             </ul>
           </div>
         </div>
-        <div class="text-nowrap display-credits">
+        <div class="text-nowrap position-absolute display-credits">
           <i>1000 Cr</i>
         </div>
       </nav>
