Refactor search button styling and adjust navbar height for improved layout

--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
               aria-label="Search"
             />
             <button
-              class="btn btn-outline-success me-2"
+              class="btn btn-outline-success me-2 custom-search-button"
               type="submit"
               title="Search"
             >
