--- a/src/index.html
+++ b/src/index.html
@@ -87,7 +87,30 @@
           <span class="visually-hidden">Loading...</span>
         </div>
       </div>
-      <h1 class="text-center mt-5">Listings</h1>
+      <div class="container-fluid">
+        <div class="heading d-flex mb-3">
+          <h1 class="text-center mt-5">Listings</h1>
+        </div>
+        <div class="container-fluid d-flex gap-2">
+          <div>
+            <a class="btn btn-primary add-listing-button" href="#" role="button"
+              ><i class="bi bi-plus"></i>Add Listing</a
+            >
+          </div>
+          <div class="form-check form-switch">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              role="switch"
+              id="switchCheckChecked"
+              checked
+            />
+            <label class="form-check-label" for="switchCheckChecked"
+              >Show Active Only</label
+            >
+          </div>
+        </div>
+      </div>
     </main>
     <footer></footer>
   </body>
