--- a/src/index.html
+++ b/src/index.html
@@ -88,16 +88,16 @@
         </div>
       </div>
       <div class="container-fluid">
-        <div class="heading d-flex mb-3">
+        <div class="container-fluid d-flex mb-3">
           <h1 class="text-center mt-5">Listings</h1>
         </div>
-        <div class="container-fluid d-flex gap-2">
+        <div class="container-fluid d-flex gap-5 align-items-center">
           <div>
             <a class="btn btn-primary add-listing-button" href="#" role="button"
               ><i class="bi bi-plus"></i>Add Listing</a
             >
           </div>
-          <div class="form-check form-switch">
+          <div class="form-check form-switch d-flex align-items-center">
             <input
               class="form-check-input"
               type="checkbox"
