--- a/src/index.html
+++ b/src/index.html
@@ -661,6 +661,10 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer class="fixed-bottom">
+      <div class="container-fluid bg-primary">
+        <p class="text-light mt-3 p-3">Tradeauction &copy; 2025</p>
+      </div>
+    </footer>
   </body>
 </html>
