Update layout and styles for header and footer components

--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
           <i>1000 Cr</i>
         </div>
       </nav>
-      <div class="container-fluid w-50">
+      <div class="container-fluid w-50 pb-2">
         <form class="d-flex" role="search">
           <div class="input-group mb-3">
             <input
@@ -88,33 +88,36 @@
           <span class="visually-hidden">Loading...</span>
         </div>
       </div>
-      <div class="container-fluid">
-        <div class="container-fluid d-flex mb-3">
-          <h1 class="text-center mt-5">Listings</h1>
-        </div>
-        <div class="container-fluid d-flex gap-5 align-items-center">
-          <div>
-            <a class="btn btn-primary add-listing-button" href="#" role="button"
-              ><i class="bi bi-plus"></i>Add Listing</a
-            >
+      <section class="container mt-2 mb-5">
+        <div class="container-fluid mb-5 ps-0 pe-0">
+          <div class="container-fluid d-flex mb-3">
+            <h1 class="text-center mt-5 ms-0">Listings</h1>
           </div>
-          <div class="form-check form-switch d-flex align-items-center">
-            <input
-              class="form-check-input"
-              type="checkbox"
-              role="switch"
-              id="switchCheckChecked"
-              checked
-            />
-            <label class="form-check-label" for="switchCheckChecked"
-              >Show Active Only</label
-            >
+          <div class="container-fluid d-flex gap-5 align-items-center">
+            <div>
+              <a
+                class="btn btn-primary add-listing-button"
+                href="#"
+                role="button"
+                ><i class="bi bi-plus"></i>Add Listing</a
+              >
+            </div>
+            <div class="form-check form-switch d-flex align-items-center">
+              <input
+                class="form-check-input"
+                type="checkbox"
+                role="switch"
+                id="switchCheckChecked"
+                checked
+              />
+              <label class="form-check-label" for="switchCheckChecked"
+                >Show Active Only</label
+              >
+            </div>
           </div>
         </div>
-      </div>
-      <section class="container mt-5 mb-5">
         <div class="row g-4">
-          <div class="col">
+          <div class="col-12 col-sm-8 col-md-6 col-lg-4 col-xxl-3">
             <div class="card">
               <img
                 src="img/sunflowers-1719119_640.jpg"
@@ -182,7 +185,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-12 col-sm-8 col-md-6 col-lg-4 col-xxl-3">
             <div class="card">
               <img
                 src="img/sunflowers-1719119_640.jpg"
@@ -250,7 +253,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-12 col-sm-8 col-md-6 col-lg-4 col-xxl-3">
             <div class="card">
               <img
                 src="img/sunflowers-1719119_640.jpg"
@@ -318,7 +321,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-12 col-sm-8 col-md-6 col-lg-4 col-xxl-3">
             <div class="card">
               <img
                 src="img/sunflowers-1719119_640.jpg"
@@ -386,7 +389,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-12 col-sm-8 col-md-6 col-lg-4 col-xxl-3">
             <div class="card">
               <img
                 src="img/sunflowers-1719119_640.jpg"
@@ -454,7 +457,7 @@
               </div>
             </div>
           </div>
-          <div class="col2">
+          <div class="col-12 col-sm-8 col-md-6 col-lg-4 col-xxl-3">
             <div class="card">
               <img
                 src="img/sunflowers-1719119_640.jpg"
@@ -522,7 +525,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-12 col-sm-8 col-md-6 col-lg-4 col-xxl-3">
             <div class="card">
               <img
                 src="img/sunflowers-1719119_640.jpg"
@@ -590,7 +593,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-12 col-sm-8 col-md-6 col-lg-4 col-xxl-3">
             <div class="card">
               <img
                 src="img/sunflowers-1719119_640.jpg"
@@ -661,7 +664,7 @@
         </div>
       </section>
     </main>
-    <footer class="fixed-bottom">
+    <footer class="">
       <div class="container-fluid bg-primary">
         <p class="text-light mt-3 p-3">Tradeauction &copy; 2025</p>
       </div>
