Enhance card component layout and styles for better readability and consistency

--- a/src/index.html
+++ b/src/index.html
@@ -125,12 +125,16 @@
                 alt="Flower Vase"
               />
               <div class="card-body">
-                <div class="d-flex">
-                  <h5 class="card-title text-nowrap">Flower Vase</h5>
-                  <i class="text-nowrap">Posted Aug 03.2025</i>
+                <div class="d-flex justify-content-between">
+                  <div>
+                    <h2 class="card-title text-nowrap">Flower Vase</h2>
+                  </div>
+                  <div>
+                    <small class="text-nowrap">Posted Aug 03.2025</small>
+                  </div>
                 </div>
                 <i class="card-author">By <a href="#">Ola Nordmann</a></i>
-                <div class="d-flex gap-2 mt-2 mb-2 card-tags">
+                <div class="d-flex gap-2 mt-3 mb-3 card-tags">
                   <a
                     href="#"
                     class="btn btn-secondary btn-sm rounded-5"
@@ -157,8 +161,8 @@
                   Beautiful flower vase with a unique design. Perfect for home
                   decor.
                 </p>
-                <div class="container-fluid card-recent-bids">
-                  <h5>Recent Bids:</h5>
+                <div class="container-fluid card-recent-bids p-0 pt-3 pb-4">
+                  <h2>Recent Bids:</h2>
                   <ul>
                     <li>5 Credits By<a href="#">Ola Nordmann</a></li>
                     <li>10 Credits By<a href="#">Alice Delice</a></li>
@@ -194,8 +198,8 @@
               />
               <div class="card-body">
                 <div class="d-flex">
-                  <h5 class="card-title text-nowrap">Flower Vase</h5>
-                  <i class="text-nowrap">Posted Aug 03.2025</i>
+                  <h2 class="card-title text-nowrap">Flower Vase</h2>
+                  <small class="text-nowrap">Posted Aug 03.2025</small>
                 </div>
                 <i class="card-author">By <a href="#">Ola Nordmann</a></i>
                 <div class="d-flex gap-2 mt-2 mb-2 card-tags">
@@ -226,7 +230,7 @@
                   decor.
                 </p>
                 <div class="container-fluid card-recent-bids">
-                  <h5>Recent Bids:</h5>
+                  <h2>Recent Bids:</h2>
                   <ul>
                     <li>5 Credits By<a href="#">Ola Nordmann</a></li>
                     <li>10 Credits By<a href="#">Alice Delice</a></li>
@@ -262,8 +266,8 @@
               />
               <div class="card-body">
                 <div class="d-flex">
-                  <h5 class="card-title text-nowrap">Flower Vase</h5>
-                  <i class="text-nowrap">Posted Aug 03.2025</i>
+                  <h2 class="card-title text-nowrap">Flower Vase</h2>
+                  <small class="text-nowrap">Posted Aug 03.2025</small>
                 </div>
                 <i class="card-author">By <a href="#">Ola Nordmann</a></i>
                 <div class="d-flex gap-2 mt-2 mb-2 card-tags">
@@ -294,7 +298,7 @@
                   decor.
                 </p>
                 <div class="container-fluid card-recent-bids">
-                  <h5>Recent Bids:</h5>
+                  <h2>Recent Bids:</h2>
                   <ul>
                     <li>5 Credits By<a href="#">Ola Nordmann</a></li>
                     <li>10 Credits By<a href="#">Alice Delice</a></li>
@@ -330,8 +334,8 @@
               />
               <div class="card-body">
                 <div class="d-flex">
-                  <h5 class="card-title text-nowrap">Flower Vase</h5>
-                  <i class="text-nowrap">Posted Aug 03.2025</i>
+                  <h2 class="card-title text-nowrap">Flower Vase</h2>
+                  <small class="text-nowrap">Posted Aug 03.2025</small>
                 </div>
                 <i class="card-author">By <a href="#">Ola Nordmann</a></i>
                 <div class="d-flex gap-2 mt-2 mb-2 card-tags">
@@ -362,7 +366,7 @@
                   decor.
                 </p>
                 <div class="container-fluid card-recent-bids">
-                  <h5>Recent Bids:</h5>
+                  <h2>Recent Bids:</h2>
                   <ul>
                     <li>5 Credits By<a href="#">Ola Nordmann</a></li>
                     <li>10 Credits By<a href="#">Alice Delice</a></li>
@@ -398,8 +402,8 @@
               />
               <div class="card-body">
                 <div class="d-flex">
-                  <h5 class="card-title text-nowrap">Flower Vase</h5>
-                  <i class="text-nowrap">Posted Aug 03.2025</i>
+                  <h2 class="card-title text-nowrap">Flower Vase</h2>
+                  <small class="text-nowrap">Posted Aug 03.2025</small>
                 </div>
                 <i class="card-author">By <a href="#">Ola Nordmann</a></i>
                 <div class="d-flex gap-2 mt-2 mb-2 card-tags">
@@ -430,7 +434,7 @@
                   decor.
                 </p>
                 <div class="container-fluid card-recent-bids">
-                  <h5>Recent Bids:</h5>
+                  <h2>Recent Bids:</h2>
                   <ul>
                     <li>5 Credits By<a href="#">Ola Nordmann</a></li>
                     <li>10 Credits By<a href="#">Alice Delice</a></li>
@@ -466,8 +470,8 @@
               />
               <div class="card-body">
                 <div class="d-flex">
-                  <h5 class="card-title text-nowrap">Flower Vase</h5>
-                  <i class="text-nowrap">Posted Aug 03.2025</i>
+                  <h2 class="card-title text-nowrap">Flower Vase</h2>
+                  <small class="text-nowrap">Posted Aug 03.2025</small>
                 </div>
                 <i class="card-author">By <a href="#">Ola Nordmann</a></i>
                 <div class="d-flex gap-2 mt-2 mb-2 card-tags">
@@ -498,7 +502,7 @@
                   decor.
                 </p>
                 <div class="container-fluid card-recent-bids">
-                  <h5>Recent Bids:</h5>
+                  <h2>Recent Bids:</h2>
                   <ul>
                     <li>5 Credits By<a href="#">Ola Nordmann</a></li>
                     <li>10 Credits By<a href="#">Alice Delice</a></li>
@@ -534,8 +538,8 @@
               />
               <div class="card-body">
                 <div class="d-flex">
-                  <h5 class="card-title text-nowrap">Flower Vase</h5>
-                  <i class="text-nowrap">Posted Aug 03.2025</i>
+                  <h2 class="card-title text-nowrap">Flower Vase</h2>
+                  <small class="text-nowrap">Posted Aug 03.2025</small>
                 </div>
                 <i class="card-author">By <a href="#">Ola Nordmann</a></i>
                 <div class="d-flex gap-2 mt-2 mb-2 card-tags">
@@ -566,7 +570,7 @@
                   decor.
                 </p>
                 <div class="container-fluid card-recent-bids">
-                  <h5>Recent Bids:</h5>
+                  <h2>Recent Bids:</h2>
                   <ul>
                     <li>5 Credits By<a href="#">Ola Nordmann</a></li>
                     <li>10 Credits By<a href="#">Alice Delice</a></li>
@@ -602,8 +606,8 @@
               />
               <div class="card-body">
                 <div class="d-flex">
-                  <h5 class="card-title text-nowrap">Flower Vase</h5>
-                  <i class="text-nowrap">Posted Aug 03.2025</i>
+                  <h2 class="card-title text-nowrap">Flower Vase</h2>
+                  <small class="text-nowrap">Posted Aug 03.2025</small>
                 </div>
                 <i class="card-author">By <a href="#">Ola Nordmann</a></i>
                 <div class="d-flex gap-2 mt-2 mb-2 card-tags">
@@ -634,7 +638,7 @@
                   decor.
                 </p>
                 <div class="container-fluid card-recent-bids">
-                  <h5>Recent Bids:</h5>
+                  <h2>Recent Bids:</h2>
                   <ul>
                     <li>5 Credits By<a href="#">Ola Nordmann</a></li>
                     <li>10 Credits By<a href="#">Alice Delice</a></li>
