Add margin to card text for improved spacing

--- a/src/index.html
+++ b/src/index.html
@@ -157,7 +157,7 @@
                     >Vase</a
                   >
                 </div>
-                <p class="card-text">
+                <p class="card-text mt-5">
                   Beautiful flower vase with a unique design. Perfect for home
                   decor.
                 </p>
