--- a/src/index.html
+++ b/src/index.html
@@ -124,6 +124,16 @@
                 class="card-img-top"
                 alt="Flower Vase"
               />
+              <div
+                class="container position-absolute top-0 end-0 p-2 rounded-3 mt-2 me-2 text-center text-light card-display-bids"
+              >
+                5 bids
+              </div>
+              <div
+                class="container position-absolute top-0 end-0 p-2 rounded-3 me-2 text-center text-light card-display-ends"
+              >
+                Ends Aug 10.2025
+              </div>
               <div class="card-body">
                 <div class="d-flex justify-content-between">
                   <div>
