Add bid and end time display to card components for improved visibility

--- a/src/index.html
+++ b/src/index.html
@@ -206,13 +206,27 @@
                 class="card-img-top"
                 alt="Flower Vase"
               />
+              <div
+                class="container position-absolute top-0 end-0 p-2 rounded-3 mt-2 me-2 text-center text-light card-display-bids"
+              >
+                5 bids
+              </div>
+              <div
+                class="container position-absolute top-0 end-0 p-2 rounded-3 me-2 text-center text-light card-display-ends"
+              >
+                Ends Aug 10.2025
+              </div>
               <div class="card-body">
-                <div class="d-flex">
-                  <h2 class="card-title text-nowrap">Flower Vase</h2>
-                  <small class="text-nowrap">Posted Aug 03.2025</small>
+                <div class="d-flex justify-content-between">
+                  <div>
+                    <h2 class="card-title text-nowrap">Flower Vase</h2>
+                  </div>
+                  <div>
+                    <small class="text-nowrap">Posted Aug 03.2025</small>
+                  </div>
                 </div>
                 <i class="card-author">By <a href="#">Ola Nordmann</a></i>
-                <div class="d-flex gap-2 mt-2 mb-2 card-tags">
+                <div class="d-flex gap-2 mt-3 mb-3 card-tags">
                   <a
                     href="#"
                     class="btn btn-secondary btn-sm rounded-5"
@@ -235,11 +249,11 @@
                     >Vase</a
                   >
                 </div>
-                <p class="card-text">
+                <p class="card-text mt-5">
                   Beautiful flower vase with a unique design. Perfect for home
                   decor.
                 </p>
-                <div class="container-fluid card-recent-bids">
+                <div class="container-fluid card-recent-bids p-0 pt-3 pb-4">
                   <h2>Recent Bids:</h2>
                   <ul>
                     <li>5 Credits By<a href="#">Ola Nordmann</a></li>
@@ -274,13 +288,27 @@
                 class="card-img-top"
                 alt="Flower Vase"
               />
+              <div
+                class="container position-absolute top-0 end-0 p-2 rounded-3 mt-2 me-2 text-center text-light card-display-bids"
+              >
+                5 bids
+              </div>
+              <div
+                class="container position-absolute top-0 end-0 p-2 rounded-3 me-2 text-center text-light card-display-ends"
+              >
+                Ends Aug 10.2025
+              </div>
               <div class="card-body">
-                <div class="d-flex">
-                  <h2 class="card-title text-nowrap">Flower Vase</h2>
-                  <small class="text-nowrap">Posted Aug 03.2025</small>
+                <div class="d-flex justify-content-between">
+                  <div>
+                    <h2 class="card-title text-nowrap">Flower Vase</h2>
+                  </div>
+                  <div>
+                    <small class="text-nowrap">Posted Aug 03.2025</small>
+                  </div>
                 </div>
                 <i class="card-author">By <a href="#">Ola Nordmann</a></i>
-                <div class="d-flex gap-2 mt-2 mb-2 card-tags">
+                <div class="d-flex gap-2 mt-3 mb-3 card-tags">
                   <a
                     href="#"
                     class="btn btn-secondary btn-sm rounded-5"
@@ -303,11 +331,11 @@
                     >Vase</a
                   >
                 </div>
-                <p class="card-text">
+                <p class="card-text mt-5">
                   Beautiful flower vase with a unique design. Perfect for home
                   decor.
                 </p>
-                <div class="container-fluid card-recent-bids">
+                <div class="container-fluid card-recent-bids p-0 pt-3 pb-4">
                   <h2>Recent Bids:</h2>
                   <ul>
                     <li>5 Credits By<a href="#">Ola Nordmann</a></li>
@@ -342,13 +370,27 @@
                 class="card-img-top"
                 alt="Flower Vase"
               />
+              <div
+                class="container position-absolute top-0 end-0 p-2 rounded-3 mt-2 me-2 text-center text-light card-display-bids"
+              >
+                5 bids
+              </div>
+              <div
+                class="container position-absolute top-0 end-0 p-2 rounded-3 me-2 text-center text-light card-display-ends"
+              >
+                Ends Aug 10.2025
+              </div>
               <div class="card-body">
-                <div class="d-flex">
-                  <h2 class="card-title text-nowrap">Flower Vase</h2>
-                  <small class="text-nowrap">Posted Aug 03.2025</small>
+                <div class="d-flex justify-content-between">
+                  <div>
+                    <h2 class="card-title text-nowrap">Flower Vase</h2>
+                  </div>
+                  <div>
+                    <small class="text-nowrap">Posted Aug 03.2025</small>
+                  </div>
                 </div>
                 <i class="card-author">By <a href="#">Ola Nordmann</a></i>
-                <div class="d-flex gap-2 mt-2 mb-2 card-tags">
+                <div class="d-flex gap-2 mt-3 mb-3 card-tags">
                   <a
                     href="#"
                     class="btn btn-secondary btn-sm rounded-5"
@@ -371,11 +413,11 @@
                     >Vase</a
                   >
                 </div>
-                <p class="card-text">
+                <p class="card-text mt-5">
                   Beautiful flower vase with a unique design. Perfect for home
                   decor.
                 </p>
-                <div class="container-fluid card-recent-bids">
+                <div class="container-fluid card-recent-bids p-0 pt-3 pb-4">
                   <h2>Recent Bids:</h2>
                   <ul>
                     <li>5 Credits By<a href="#">Ola Nordmann</a></li>
@@ -410,13 +452,27 @@
                 class="card-img-top"
                 alt="Flower Vase"
               />
+              <div
+                class="container position-absolute top-0 end-0 p-2 rounded-3 mt-2 me-2 text-center text-light card-display-bids"
+              >
+                5 bids
+              </div>
+              <div
+                class="container position-absolute top-0 end-0 p-2 rounded-3 me-2 text-center text-light card-display-ends"
+              >
+                Ends Aug 10.2025
+              </div>
               <div class="card-body">
-                <div class="d-flex">
-                  <h2 class="card-title text-nowrap">Flower Vase</h2>
-                  <small class="text-nowrap">Posted Aug 03.2025</small>
+                <div class="d-flex justify-content-between">
+                  <div>
+                    <h2 class="card-title text-nowrap">Flower Vase</h2>
+                  </div>
+                  <div>
+                    <small class="text-nowrap">Posted Aug 03.2025</small>
+                  </div>
                 </div>
                 <i class="card-author">By <a href="#">Ola Nordmann</a></i>
-                <div class="d-flex gap-2 mt-2 mb-2 card-tags">
+                <div class="d-flex gap-2 mt-3 mb-3 card-tags">
                   <a
                     href="#"
                     class="btn btn-secondary btn-sm rounded-5"
@@ -439,11 +495,11 @@
                     >Vase</a
                   >
                 </div>
-                <p class="card-text">
+                <p class="card-text mt-5">
                   Beautiful flower vase with a unique design. Perfect for home
                   decor.
                 </p>
-                <div class="container-fluid card-recent-bids">
+                <div class="container-fluid card-recent-bids p-0 pt-3 pb-4">
                   <h2>Recent Bids:</h2>
                   <ul>
                     <li>5 Credits By<a href="#">Ola Nordmann</a></li>
@@ -478,149 +534,27 @@
                 class="card-img-top"
                 alt="Flower Vase"
               />
-              <div class="card-body">
-                <div class="d-flex">
-                  <h2 class="card-title text-nowrap">Flower Vase</h2>
-                  <small class="text-nowrap">Posted Aug 03.2025</small>
-                </div>
-                <i class="card-author">By <a href="#">Ola Nordmann</a></i>
-                <div class="d-flex gap-2 mt-2 mb-2 card-tags">
-                  <a
-                    href="#"
-                    class="btn btn-secondary btn-sm rounded-5"
-                    data-bs-toggle="offcanvas"
-                    role="button"
-                    >Flower</a
-                  >
-                  <a
-                    href="#"
-                    class="btn btn-secondary btn-sm rounded-5"
-                    data-bs-toggle="offcanvas"
-                    role="button"
-                    >Flora</a
-                  >
-                  <a
-                    href="#"
-                    class="btn btn-secondary btn-sm rounded-5"
-                    data-bs-toggle="offcanvas"
-                    role="button"
-                    >Vase</a
-                  >
-                </div>
-                <p class="card-text">
-                  Beautiful flower vase with a unique design. Perfect for home
-                  decor.
-                </p>
-                <div class="container-fluid card-recent-bids">
-                  <h2>Recent Bids:</h2>
-                  <ul>
-                    <li>5 Credits By<a href="#">Ola Nordmann</a></li>
-                    <li>10 Credits By<a href="#">Alice Delice</a></li>
-                    <li>15 Credits By<a href="#">John Doe</a></li>
-                  </ul>
-                </div>
-                <form>
-                  <div class="input-group mb-3">
-                    <input
-                      type="number"
-                      class="form-control"
-                      placeholder="Enter your bid"
-                      aria-label="Bid Amount"
-                    />
-                    <button
-                      class="btn btn-secondary"
-                      type="submit"
-                      title="Submit Bid"
-                    >
-                      Place Bid
-                    </button>
-                  </div>
-                </form>
+              <div
+                class="container position-absolute top-0 end-0 p-2 rounded-3 mt-2 me-2 text-center text-light card-display-bids"
+              >
+                5 bids
               </div>
-            </div>
-          </div>
-          <div class="col-12 col-sm-8 col-md-6 col-lg-4 col-xxl-3">
-            <div class="card">
-              <img
-                src="img/sunflowers-1719119_640.jpg"
-                class="card-img-top"
-                alt="Flower Vase"
-              />
-              <div class="card-body">
-                <div class="d-flex">
-                  <h2 class="card-title text-nowrap">Flower Vase</h2>
-                  <small class="text-nowrap">Posted Aug 03.2025</small>
-                </div>
-                <i class="card-author">By <a href="#">Ola Nordmann</a></i>
-                <div class="d-flex gap-2 mt-2 mb-2 card-tags">
-                  <a
-                    href="#"
-                    class="btn btn-secondary btn-sm rounded-5"
-                    data-bs-toggle="offcanvas"
-                    role="button"
-                    >Flower</a
-                  >
-                  <a
-                    href="#"
-                    class="btn btn-secondary btn-sm rounded-5"
-                    data-bs-toggle="offcanvas"
-                    role="button"
-                    >Flora</a
-                  >
-                  <a
-                    href="#"
-                    class="btn btn-secondary btn-sm rounded-5"
-                    data-bs-toggle="offcanvas"
-                    role="button"
-                    >Vase</a
-                  >
-                </div>
-                <p class="card-text">
-                  Beautiful flower vase with a unique design. Perfect for home
-                  decor.
-                </p>
-                <div class="container-fluid card-recent-bids">
-                  <h2>Recent Bids:</h2>
-                  <ul>
-                    <li>5 Credits By<a href="#">Ola Nordmann</a></li>
-                    <li>10 Credits By<a href="#">Alice Delice</a></li>
-                    <li>15 Credits By<a href="#">John Doe</a></li>
-                  </ul>
-                </div>
-                <form>
-                  <div class="input-group mb-3">
-                    <input
-                      type="number"
-                      class="form-control"
-                      placeholder="Enter your bid"
-                      aria-label="Bid Amount"
-                    />
-                    <button
-                      class="btn btn-secondary"
-                      type="submit"
-                      title="Submit Bid"
-                    >
-                      Place Bid
-                    </button>
-                  </div>
-                </form>
+              <div
+                class="container position-absolute top-0 end-0 p-2 rounded-3 me-2 text-center text-light card-display-ends"
+              >
+                Ends Aug 10.2025
               </div>
-            </div>
-          </div>
-          <div class="col-12 col-sm-8 col-md-6 col-lg-4 col-xxl-3">
-            <div class="card">
-              <img
-                src="img/sunflowers-1719119_640.jpg"
-                class="card-img-top"
-                alt="Flower Vase"
-              />
               <div class="card-body">
-                <div class="d-flex">
-                  <h2 class="card-title text-nowrap">Flower Vase</h2>
-                  <small class="text-nowrap">Posted Aug 03.2025</small>
+                <div class="d-flex justify-content-between">
+                  <div>
+                    <h2 class="card-title text-nowrap">Flower Vase</h2>
+                  </div>
+                  <div>
+                    <small class="text-nowrap">Posted Aug 03.2025</small>
+                  </div>
                 </div>
                 <i class="card-author">By <a href="#">Ola Nordmann</a></i>
-                <div class="d-flex gap-2 mt-2 mb-2 card-tags">
+                <div class="d-flex gap-2 mt-3 mb-3 card-tags">
                   <a
                     href="#"
                     class="btn btn-secondary btn-sm rounded-5"
@@ -643,11 +577,11 @@
                     >Vase</a
                   >
                 </div>
-                <p class="card-text">
+                <p class="card-text mt-5">
                   Beautiful flower vase with a unique design. Perfect for home
                   decor.
                 </p>
-                <div class="container-fluid card-recent-bids">
+                <div class="container-fluid card-recent-bids p-0 pt-3 pb-4">
                   <h2>Recent Bids:</h2>
                   <ul>
                     <li>5 Credits By<a href="#">Ola Nordmann</a></li>
