--- a/src/header_template.html
+++ b/src/header_template.html
@@ -88,6 +88,10 @@
         </div>
       </div>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="container-fluid bg-primary">
+        <p class="text-light mt-3 p-3">Tradeauction &copy; 2025</p>
+      </div>
+    </footer>
   </body>
 </html>
