--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Profile</a>
+                <a class="nav-link" href="detail.html">Profile</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link disabled" aria-disabled="true">Login</a>
@@ -612,7 +612,7 @@
         </div>
       </section>
     </main>
-    <footer class="">
+    <footer>
       <div class="container-fluid bg-primary">
         <p class="text-light mt-3 p-3">Tradeauction &copy; 2025</p>
       </div>
